flutter_lua_bridge/src/flutter_lua_bridge.h

/* ================================================================
 * 版本号
 * ================================================================ */

extern const int kLuaVersionReleaseNum;
extern const int kLuaRegistryIndex;
/* ================================================================
 * C API 函数声明
 * ================================================================ */

typedef struct lua_State lua_State;
/* lua_absindex */
int flutter_lua_bridge_absindex(lua_State* L, int idx);
/* lua_arith */
void flutter_lua_bridge_arith(lua_State* L, int op);
/* lua_atpanic */
void* flutter_lua_bridge_atpanic(lua_State* L, void* panicf);
/* lua_call */
void flutter_lua_bridge_call(lua_State* L, int nargs, int nresults);
/* lua_callk */
void flutter_lua_bridge_callk(lua_State* L, int nargs, int nresults, int ctx, void* k);
/* lua_checkstack */
int flutter_lua_bridge_checkstack(lua_State* L, int n);
/* lua_close */
void flutter_lua_bridge_close(lua_State* L);
/* lua_closeslot */
int flutter_lua_bridge_closeslot(lua_State* L, int idx);
/* lua_closethread */
int flutter_lua_bridge_closethread(lua_State* L, lua_State* from);
/* lua_compare */
int flutter_lua_bridge_compare(lua_State* L, int idx1, int idx2, int op);
/* lua_concat */
void flutter_lua_bridge_concat(lua_State* L, int n);
/* lua_copy */
void flutter_lua_bridge_copy(lua_State* L, int fromidx, int toidx);
/* lua_createtable */
void flutter_lua_bridge_createtable(lua_State* L, int nseq, int nrec);
/* lua_dump */
int flutter_lua_bridge_dump(lua_State* L, void* writer, void* data, int strip);
/* lua_error */
int flutter_lua_bridge_error(lua_State* L);
/* lua_gc */
int flutter_lua_bridge_gc(lua_State* L, int what, int data);
/* lua_getallocf */
void* flutter_lua_bridge_getallocf(lua_State* L, void** ud);
/* lua_getextraspace */
void* flutter_lua_bridge_getextraspace(lua_State* L);
/* lua_getfield */
int flutter_lua_bridge_getfield(lua_State* L, int idx, const char* k);
/* lua_getglobal */
int flutter_lua_bridge_getglobal(lua_State* L, const char* name);
/* lua_gethook */
void* flutter_lua_bridge_gethook(lua_State* L);
/* lua_gethookcount */
int flutter_lua_bridge_gethookcount(lua_State* L);
/* lua_gethookmask */
int flutter_lua_bridge_gethookmask(lua_State* L);
/* lua_geti */
int flutter_lua_bridge_geti(lua_State* L, int idx, int64_t n);
/* lua_getinfo */
int flutter_lua_bridge_getinfo(lua_State* L, const char* what, void* ar);
/* lua_getiuservalue */
void flutter_lua_bridge_getiuservalue(lua_State* L, int idx, int n);
/* lua_getlocal */
const char* flutter_lua_bridge_getlocal(lua_State* L, void* ar, int n);
/* lua_getmetatable */
int flutter_lua_bridge_getmetatable(lua_State* L, int objindex);
/* lua_getstack */
int flutter_lua_bridge_getstack(lua_State* L, int level, void* ar);
/* lua_gettable */
int flutter_lua_bridge_gettable(lua_State* L, int idx);
/* lua_gettop */
int flutter_lua_bridge_gettop(lua_State* L);
/* lua_getupvalue */
const char* flutter_lua_bridge_getupvalue(lua_State* L, int funcindex, int n);
/* lua_getuservalue */
int flutter_lua_bridge_getuservalue(lua_State* L, int idx);
/* lua_insert */
void flutter_lua_bridge_insert(lua_State* L, int idx);
/* lua_isboolean */
int flutter_lua_bridge_isboolean(lua_State* L, int idx);
/* lua_iscfunction */
int flutter_lua_bridge_iscfunction(lua_State* L, int idx);
/* lua_isfunction */
int flutter_lua_bridge_isfunction(lua_State* L, int idx);
/* lua_isinteger */
int flutter_lua_bridge_isinteger(lua_State* L, int idx);
/* lua_islightuserdata */
int flutter_lua_bridge_islightuserdata(lua_State* L, int idx);
/* lua_isnil */
int flutter_lua_bridge_isnil(lua_State* L, int idx);
/* lua_isnone */
int flutter_lua_bridge_isnone(lua_State* L, int idx);
/* lua_isnoneornil */
int flutter_lua_bridge_isnoneornil(lua_State* L, int idx);
/* lua_isnumber */
int flutter_lua_bridge_isnumber(lua_State* L, int idx);
/* lua_isstring */
int flutter_lua_bridge_isstring(lua_State* L, int idx);
/* lua_istable */
int flutter_lua_bridge_istable(lua_State* L, int idx);
/* lua_isthread */
int flutter_lua_bridge_isthread(lua_State* L, int idx);
/* lua_isuserdata */
int flutter_lua_bridge_isuserdata(lua_State* L, int idx);
/* lua_isyieldable */
int flutter_lua_bridge_isyieldable(lua_State* L);
/* lua_len */
void flutter_lua_bridge_len(lua_State* L, int idx);
/* lua_load */
int flutter_lua_bridge_load(lua_State* L, void* reader, void* dt, const char* chunkname, const char* mode);
/* lua_newstate */
lua_State* flutter_lua_bridge_newstate(void* f, void* ud);
/* lua_newtable */
void flutter_lua_bridge_newtable(lua_State* L);
/* lua_newthread */
lua_State* flutter_lua_bridge_newthread(lua_State* L);
/* lua_newuserdata */
void* flutter_lua_bridge_newuserdata(lua_State* L, size_t sz);
/* lua_newuserdatauv */
void* flutter_lua_bridge_newuserdatauv(lua_State* L, size_t sz, int nuvalue);
/* lua_next */
int flutter_lua_bridge_next(lua_State* L, int idx);
/* lua_numbertocstring */
const char* flutter_lua_bridge_numbertocstring(lua_State* L, double n, size_t* len);
/* lua_numbertointeger */
int flutter_lua_bridge_numbertointeger(double n, int64_t* p);
/* lua_pcall */
int flutter_lua_bridge_pcall(lua_State* L, int nargs, int nresults, int errfunc);