flutter_lua_bridge/lib/src/gen/flutter_lua_bridge.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_element
// ignore_for_file: unused_field
@ffi.DefaultAsset('package:flutter_lua_bridge/flutter_lua_bridge.dart')
library flutter_lua_bridge;

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// ================================================================
/// 版本号
/// ================================================================
@ffi.Native<ffi.Int>()
external final int kLuaVersionReleaseNum;

@ffi.Native<ffi.Int>()
external final int kLuaRegistryIndex;

/// lua_absindex
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_absindex(ffi.Pointer<lua_State> L, int idx);

/// lua_arith
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_arith(ffi.Pointer<lua_State> L, int op);

/// lua_atpanic
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>)
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_atpanic(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> panicf,
);

/// lua_call
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_call(
  ffi.Pointer<lua_State> L,
  int nargs,
  int nresults,
);

/// lua_callk
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Void>,
  )
>()
external void flutter_lua_bridge_callk(
  ffi.Pointer<lua_State> L,
  int nargs,
  int nresults,
  int ctx,
  ffi.Pointer<ffi.Void> k,
);

/// lua_checkstack
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_checkstack(ffi.Pointer<lua_State> L, int n);

/// lua_close
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridge_close(ffi.Pointer<lua_State> L);

/// lua_closeslot
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_closeslot(ffi.Pointer<lua_State> L, int idx);

/// lua_closethread
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_closethread(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<lua_State> from,
);

/// lua_compare
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int, ffi.Int)
>()
external int flutter_lua_bridge_compare(
  ffi.Pointer<lua_State> L,
  int idx1,
  int idx2,
  int op,
);

/// lua_concat
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_concat(ffi.Pointer<lua_State> L, int n);

/// lua_copy
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_copy(
  ffi.Pointer<lua_State> L,
  int fromidx,
  int toidx,
);

/// lua_createtable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_createtable(
  ffi.Pointer<lua_State> L,
  int nseq,
  int nrec,
);

/// lua_dump
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
    ffi.Int,
  )
>()
external int flutter_lua_bridge_dump(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> writer,
  ffi.Pointer<ffi.Void> data,
  int strip,
);

/// lua_error
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_error(ffi.Pointer<lua_State> L);

/// lua_gc
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external int flutter_lua_bridge_gc(
  ffi.Pointer<lua_State> L,
  int what,
  int data,
);

/// lua_getallocf
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Pointer<ffi.Void>>,
  )
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_getallocf(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Pointer<ffi.Void>> ud,
);

/// lua_getextraspace
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_getextraspace(
  ffi.Pointer<lua_State> L,
);

/// lua_getfield
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridge_getfield(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Char> k,
);

/// lua_getglobal
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridge_getglobal(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> name,
);

/// lua_gethook
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_gethook(
  ffi.Pointer<lua_State> L,
);

/// lua_gethookcount
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_gethookcount(ffi.Pointer<lua_State> L);

/// lua_gethookmask
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_gethookmask(ffi.Pointer<lua_State> L);

/// lua_geti
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int64)>()
external int flutter_lua_bridge_geti(ffi.Pointer<lua_State> L, int idx, int n);

/// lua_getinfo
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Void>,
  )
>()
external int flutter_lua_bridge_getinfo(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> what,
  ffi.Pointer<ffi.Void> ar,
);

/// lua_getiuservalue
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_getiuservalue(
  ffi.Pointer<lua_State> L,
  int idx,
  int n,
);

/// lua_getlocal
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Int,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_getlocal(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> ar,
  int n,
);

/// lua_getmetatable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_getmetatable(
  ffi.Pointer<lua_State> L,
  int objindex,
);

/// lua_getstack
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Void>)
>()
external int flutter_lua_bridge_getstack(
  ffi.Pointer<lua_State> L,
  int level,
  ffi.Pointer<ffi.Void> ar,
);

/// lua_gettable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_gettable(ffi.Pointer<lua_State> L, int idx);

/// lua_gettop
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_gettop(ffi.Pointer<lua_State> L);

/// lua_getupvalue
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_getupvalue(
  ffi.Pointer<lua_State> L,
  int funcindex,
  int n,
);

/// lua_getuservalue
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_getuservalue(ffi.Pointer<lua_State> L, int idx);

/// lua_insert
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_insert(ffi.Pointer<lua_State> L, int idx);

/// lua_isboolean
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isboolean(ffi.Pointer<lua_State> L, int idx);

/// lua_iscfunction
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_iscfunction(ffi.Pointer<lua_State> L, int idx);

/// lua_isfunction
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isfunction(ffi.Pointer<lua_State> L, int idx);

/// lua_isinteger
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isinteger(ffi.Pointer<lua_State> L, int idx);

/// lua_islightuserdata
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_islightuserdata(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_isnil
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isnil(ffi.Pointer<lua_State> L, int idx);

/// lua_isnone
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isnone(ffi.Pointer<lua_State> L, int idx);

/// lua_isnoneornil
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isnoneornil(ffi.Pointer<lua_State> L, int idx);

/// lua_isnumber
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isnumber(ffi.Pointer<lua_State> L, int idx);

/// lua_isstring
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isstring(ffi.Pointer<lua_State> L, int idx);

/// lua_istable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_istable(ffi.Pointer<lua_State> L, int idx);

/// lua_isthread
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isthread(ffi.Pointer<lua_State> L, int idx);

/// lua_isuserdata
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_isuserdata(ffi.Pointer<lua_State> L, int idx);

/// lua_isyieldable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_isyieldable(ffi.Pointer<lua_State> L);

/// lua_len
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_len(ffi.Pointer<lua_State> L, int idx);

/// lua_load
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int flutter_lua_bridge_load(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> reader,
  ffi.Pointer<ffi.Void> dt,
  ffi.Pointer<ffi.Char> chunkname,
  ffi.Pointer<ffi.Char> mode,
);

/// lua_newstate
@ffi.Native<
  ffi.Pointer<lua_State> Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)
>()
external ffi.Pointer<lua_State> flutter_lua_bridge_newstate(
  ffi.Pointer<ffi.Void> f,
  ffi.Pointer<ffi.Void> ud,
);

/// lua_newtable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridge_newtable(ffi.Pointer<lua_State> L);

/// lua_newthread
@ffi.Native<ffi.Pointer<lua_State> Function(ffi.Pointer<lua_State>)>()
external ffi.Pointer<lua_State> flutter_lua_bridge_newthread(
  ffi.Pointer<lua_State> L,
);

/// lua_newuserdata
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Size)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_newuserdata(
  ffi.Pointer<lua_State> L,
  int sz,
);

/// lua_newuserdatauv
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Size, ffi.Int)
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_newuserdatauv(
  ffi.Pointer<lua_State> L,
  int sz,
  int nuvalue,
);

/// lua_next
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_next(ffi.Pointer<lua_State> L, int idx);

/// lua_numbertocstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Double,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_numbertocstring(
  ffi.Pointer<lua_State> L,
  double n,
  ffi.Pointer<ffi.Size> len,
);

/// lua_numbertointeger
@ffi.Native<ffi.Int Function(ffi.Double, ffi.Pointer<ffi.Int64>)>()
external int flutter_lua_bridge_numbertointeger(
  double n,
  ffi.Pointer<ffi.Int64> p,
);

/// lua_pcall
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int, ffi.Int)
>()
external int flutter_lua_bridge_pcall(
  ffi.Pointer<lua_State> L,
  int nargs,
  int nresults,
  int errfunc,
);
